# opengl_clion_tng

./: CMakeLists.txt  main.cpp
common/: CustomObjLoader.cpp  CustomObjLoader.h  VBOIndexer.cpp  VBOIndexer.h  controls.cpp  controls.h  loadDDS.cpp  loadDDS.h  shader.cpp  shader.h
libs/glew/libs/: glew32.exp  glew32.lib  libglew32.lib
libs/glfw/libs/: glfw3.lib
libs/glm/libs/: glm_static.lib
